--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-/* aqui reseta os padding e margin da pagica e fica tudo junto com a tela */
+/* aqui reseta os padding  */
 *{
     padding: 0;
     margin: 0;
@@ -137,7 +137,7 @@
     cursor: pointer;
 }
 
-/* -----------------------Final de header---------------------------- */
+/* -----------------------Final do header---------------------------- */
 
 html, body {
     height: 100%;
